# petpet-rs-jni

./: Cargo.toml  README.md
.github/workflows/: rust.yml
java/: Petpet.h  Petpet.java
src/: lib.rs
