[package]
name = "petpet-rs-jni"
version = "0.1.0"
edition = "2018"
authors = ["poly000"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "~0.19.0"
petpet = { git = "https://github.com/poly000/petpet-rs", branch = "master" }

[lib]
name = "petpet_jni"
crate-type = ["cdylib"]
